<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/performer_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Album Name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:drawableStart="@drawable/music_24"
        android:drawablePadding="10dp"/>
</LinearLayout>